==> RT-Thread/rt-thread/bsp/at32f435-start/libraries/rt_drivers/drv_gpio.c <==
#include <board.h>
#include "drv_gpio.h"
#define PIN_NUM(port, no)           (((((port) & 0xFu) << 4) | ((no) & 0xFu)))
#define PIN_PORT(pin)               ((uint8_t)(((pin) >> 4) & 0xFu))
#define PIN_NO(pin)                 ((uint8_t)((pin) & 0xFu))
#define PIN_ATPORTSOURCE(pin)       ((uint8_t)(((pin) & 0xF0u) >> 4))
#define PIN_ATPINSOURCE(pin)        ((uint8_t)((pin) & 0xFu))
#define PIN_ATPORT(pin)             ((gpio_type *)(GPIOA_BASE + (0x400u * PIN_PORT(pin))))
#define PIN_ATPIN(pin)              ((uint16_t)(1u << PIN_NO(pin)))
    #define __AT32_PORT_MAX 12u
    #define __AT32_PORT_MAX 11u
    #define __AT32_PORT_MAX 10u
    #define __AT32_PORT_MAX 9u
    #define __AT32_PORT_MAX 8u
    #define __AT32_PORT_MAX 7u
    #define __AT32_PORT_MAX 6u
    #define __AT32_PORT_MAX 5u
    #define __AT32_PORT_MAX 4u
    #define __AT32_PORT_MAX 3u
    #define __AT32_PORT_MAX 2u
    #define __AT32_PORT_MAX 1u
    #define __AT32_PORT_MAX 0u
#define PIN_ATPORT_MAX __AT32_PORT_MAX
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void at32_pin_write(rt_device_t dev, rt_base_t pin, rt_base_t value)
{
    gpio_type *gpio_port;
    uint16_t gpio_pin;
    if (PIN_PORT(pin) < PIN_ATPORT_MAX)
    {
        gpio_port    =  PIN_ATPORT(pin);
        gpio_pin     =  PIN_ATPIN(pin);

        gpio_bits_write(gpio_port, gpio_pin, (confirm_state) value);
    }

}

static int at32_pin_read(rt_device_t dev, rt_base_t pin)
{
    gpio_type *gpio_port;
    uint16_t gpio_pin;
    int value;

    value = PIN_LOW;

    if (PIN_PORT(pin) < PIN_ATPORT_MAX)
    {
        gpio_port    =  PIN_ATPORT(pin);
        gpio_pin     =  PIN_ATPIN(pin);
        value = gpio_input_data_bit_read(gpio_port, gpio_pin);
    }
    return value;
}

static void at32_pin_mode(rt_device_t dev, rt_base_t pin, rt_base_t mode)
{
    gpio_init_type gpio_init_struct;

    if (PIN_PORT(pin) >= PIN_ATPORT_MAX)
    {
        return;
    }

    /* set default parameter */
    gpio_default_para_init(&gpio_init_struct);

    /* Configure GPIO_InitStructure */
    gpio_init_struct.gpio_pins = PIN_ATPIN(pin);
    gpio_init_struct.gpio_out_type  = GPIO_OUTPUT_PUSH_PULL;
    gpio_init_struct.gpio_mode = GPIO_MODE_OUTPUT;
    gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
    gpio_init_struct.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;

    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        gpio_init_struct.gpio_mode = GPIO_MODE_OUTPUT;
        gpio_init_struct.gpio_out_type  = GPIO_OUTPUT_PUSH_PULL;
        gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        gpio_init_struct.gpio_mode = GPIO_MODE_INPUT;
        gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        gpio_init_struct.gpio_mode = GPIO_MODE_INPUT;
        gpio_init_struct.gpio_pull = GPIO_PULL_UP;
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        gpio_init_struct.gpio_mode = GPIO_MODE_INPUT;
        gpio_init_struct.gpio_pull = GPIO_PULL_DOWN;
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        gpio_init_struct.gpio_mode = GPIO_MODE_OUTPUT;
        gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
        gpio_init_struct.gpio_out_type  = GPIO_OUTPUT_OPEN_DRAIN;
    }

    gpio_init(PIN_ATPORT(pin), &gpio_init_struct);

}

static rt_err_t at32_pin_attach_irq(struct rt_device *device, rt_int32_t pin,
                                    rt_uint32_t mode, void (*hdr)(void *args), void *args)
{
    rt_base_t level;
    rt_int32_t irqindex = -1;

    if (PIN_PORT(pin) >= PIN_ATPORT_MAX)
    {
        return -RT_ENOSYS;
    }

    irqindex = bit2bitno(PIN_ATPIN(pin));
    if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
    {
        return -RT_EINVAL;
    }

    level = rt_hw_interrupt_disable();
    if (pin_irq_hdr_tab[irqindex].pin == pin &&
        pin_irq_hdr_tab[irqindex].hdr == hdr &&
        pin_irq_hdr_tab[irqindex].mode == mode &&
        pin_irq_hdr_tab[irqindex].args == args)
    {
        rt_hw_interrupt_enable(level);
        return RT_EOK;
    }
    if (pin_irq_hdr_tab[irqindex].pin != -1)
    {
        rt_hw_interrupt_enable(level);
        return -RT_EBUSY;
    }
    pin_irq_hdr_tab[irqindex].pin = pin;
    pin_irq_hdr_tab[irqindex].hdr = hdr;
    pin_irq_hdr_tab[irqindex].mode = mode;
    pin_irq_hdr_tab[irqindex].args = args;
    rt_hw_interrupt_enable(level);

    return RT_EOK;
}

static rt_err_t at32_pin_dettach_irq(struct rt_device *device, rt_int32_t pin)
{
    rt_base_t level;
    rt_int32_t irqindex = -1;

    if (PIN_PORT(pin) >= PIN_ATPORT_MAX)
    {
        return -RT_ENOSYS;
    }

    irqindex = bit2bitno(PIN_ATPIN(pin));
    if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
    {
        return -RT_EINVAL;
    }

    level = rt_hw_interrupt_disable();
    if (pin_irq_hdr_tab[irqindex].pin == -1)
    {
        rt_hw_interrupt_enable(level);
        return RT_EOK;
    }
    pin_irq_hdr_tab[irqindex].pin = -1;
    pin_irq_hdr_tab[irqindex].hdr = RT_NULL;
    pin_irq_hdr_tab[irqindex].mode = 0;
    pin_irq_hdr_tab[irqindex].args = RT_NULL;
    rt_hw_interrupt_enable(level);

    return RT_EOK;
}

static rt_err_t at32_pin_irq_enable(struct rt_device *device, rt_base_t pin,
                                    rt_uint32_t enabled)
{
    const struct pin_irq_map *irqmap;
    rt_base_t level;
    rt_int32_t irqindex = -1;
    gpio_init_type gpio_init_struct;
    exint_init_type exint_init_struct;

    if (PIN_PORT(pin) >= PIN_ATPORT_MAX)
    {
        return -RT_ENOSYS;
    }

    if (enabled == PIN_IRQ_ENABLE)
    {
        irqindex = bit2bitno(PIN_ATPIN(pin));
        if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
        {
            return -RT_EINVAL;
        }

        level = rt_hw_interrupt_disable();

        if (pin_irq_hdr_tab[irqindex].pin == -1)
        {
            rt_hw_interrupt_enable(level);
            return -RT_EINVAL;
        }

        irqmap = &pin_irq_map[irqindex];

        /* Configure GPIO_InitStructure */
        gpio_default_para_init(&gpio_init_struct);
        exint_default_para_init(&exint_init_struct);
        gpio_init_struct.gpio_pins = irqmap->pinbit;
        exint_init_struct.line_select = irqmap->pinbit;
        exint_init_struct.line_mode = EXINT_LINE_INTERRUPUT;
        exint_init_struct.line_enable = TRUE;

        switch (pin_irq_hdr_tab[irqindex].mode)
        {
        case PIN_IRQ_MODE_RISING:
            exint_init_struct.line_polarity = EXINT_TRIGGER_RISING_EDGE;
            break;
        case PIN_IRQ_MODE_FALLING:
            exint_init_struct.line_polarity = EXINT_TRIGGER_FALLING_EDGE;
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            exint_init_struct.line_polarity = EXINT_TRIGGER_BOTH_EDGE;
            break;
        }
        gpio_init(PIN_ATPORT(pin), &gpio_init_struct);
        scfg_exint_line_config((scfg_port_source_type)PIN_ATPORTSOURCE(pin), (scfg_pins_source_type)PIN_ATPINSOURCE(pin));
        exint_init(&exint_init_struct);

        nvic_priority_group_config(NVIC_PRIORITY_GROUP_4);
        nvic_irq_enable(irqmap->irqno, 5, 0);

        pin_irq_enable_mask |= irqmap->pinbit;

        rt_hw_interrupt_enable(level);
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
        irqmap = get_pin_irq_map(PIN_ATPIN(pin));
        if (irqmap == RT_NULL)
        {
            return -RT_EINVAL;
        }

        level = rt_hw_interrupt_disable();

        pin_irq_enable_mask &= ~irqmap->pinbit;

        if ((irqmap->pinbit >= GPIO_PINS_5) && (irqmap->pinbit <= GPIO_PINS_9))
        {
            if (!(pin_irq_enable_mask & (GPIO_PINS_5 | GPIO_PINS_6 | GPIO_PINS_7 | GPIO_PINS_8 | GPIO_PINS_9)))
            {
                nvic_irq_disable(irqmap->irqno);
            }
        }
        else if ((irqmap->pinbit >= GPIO_PINS_10) && (irqmap->pinbit <= GPIO_PINS_15))
        {
            if (!(pin_irq_enable_mask & (GPIO_PINS_10 | GPIO_PINS_11 | GPIO_PINS_12 | GPIO_PINS_13 | GPIO_PINS_14 | GPIO_PINS_15)))
            {
                nvic_irq_disable(irqmap->irqno);
            }
        }
        else
        {
            nvic_irq_disable(irqmap->irqno);
        }

        rt_hw_interrupt_enable(level);
    }
    else
    {
        return -RT_EINVAL;
    }

    return RT_EOK;
}

void EXTI0_IRQHandler(void)
{
    rt_interrupt_enter();
    GPIO_EXTI_IRQHandler(GPIO_PINS_0);
    rt_interrupt_leave();
}

void EXTI1_IRQHandler(void)
{
    rt_interrupt_enter();
    // EXTI_ClearIntPendingBit(GPIO_PINS_1);
    GPIO_EXTI_IRQHandler(GPIO_PINS_1);
    rt_interrupt_leave();
}

void EXTI2_IRQHandler(void)
{
    rt_interrupt_enter();
    GPIO_EXTI_IRQHandler(GPIO_PINS_2);
    rt_interrupt_leave();
}

void EXTI3_IRQHandler(void)
{
    rt_interrupt_enter();
    GPIO_EXTI_IRQHandler(GPIO_PINS_3);
    rt_interrupt_leave();
}

void EXTI4_IRQHandler(void)
{
    rt_interrupt_enter();
    GPIO_EXTI_IRQHandler(GPIO_PINS_4);
    rt_interrupt_leave();
}

int rt_hw_pin_init(void)
{
#ifdef GPIOA
    crm_periph_clock_enable(CRM_GPIOA_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOB
    crm_periph_clock_enable(CRM_GPIOB_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOC
    crm_periph_clock_enable(CRM_GPIOC_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOD
    crm_periph_clock_enable(CRM_GPIOD_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOE
    crm_periph_clock_enable(CRM_GPIOE_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOF
    crm_periph_clock_enable(CRM_GPIOF_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOG
    crm_periph_clock_enable(CRM_GPIOG_PERIPH_CLOCK, TRUE);
#endif
#ifdef GPIOH
    crm_periph_clock_enable(CRM_GPIOH_PERIPH_CLOCK, TRUE);
#endif
    // RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_AFIO, TRUE);

    return rt_device_pin_register("pin", &_at32_pin_ops, RT_NULL);
}
